fixed center aligned image
fixed center aligned image

--- a/WSP_Cassini_Flavio_Wk1/css/main.css
+++ b/WSP_Cassini_Flavio_Wk1/css/main.css
@@ -34,7 +34,9 @@ section {
 
 .image { 
    position: relative; 
-   width: 100%; /* for IE 6 */
+   width: 60%; /* for IE 6 */
+   margin: 0
+   
 }section .image p  {
 	position: absolute;
 	top: 41px;
